--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <button class="equal" data-action="calculate">=</button>
     </div>
   </div>
+  <div class="calculator"></div>
 
 <script src="script.js"></script>
 </body>
