--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <button>3</button>
       <button>0</button>
       <button data-action="decimal">.</button>
-      <button data-action="clear">AC</button>
+      <button class="ac" data-action="clear">AC</button>
       <button class="equal" data-action="calculate">=</button>
     </div>
   </div>
-  <div class="calculator"></div>
+  
 
 <script src="script.js"></script>
 </body>
